examples/test/testpolicy14017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14017
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key30: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value17
          key46: value2
          key31: value33
      podSelector:
        matchLabels:
          key29: value12
